<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".JoinDialogFragment">

    <LinearLayout
        android:id="@+id/llt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_bg_dialog"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/codeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_dialog"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/enter_the_code"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/codeET"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:autofillHints=""
                android:background="@drawable/custom_et"
                android:drawablePadding="10dp"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="10dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/okButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/bg_button"
                    android:elevation="0dp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lltLoading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_bg_dialog"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/joining_the_game"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/primary" />

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circulo"
        android:contentDescription="Link"
        android:elevation="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_link"
        app:layout_constraintBottom_toTopOf="@id/llt"
        app:layout_constraintEnd_toEndOf="@id/llt"
        app:layout_constraintStart_toStartOf="@id/llt"
        app:layout_constraintTop_toTopOf="@id/llt"
        app:tint="@color/secondary_light" />

</androidx.constraintlayout.widget.ConstraintLayout>